--- a/index.html
+++ b/index.html
@@ -2,27 +2,33 @@
 <html>
 
 <head>
-	<title>Parcel Sandbox</title>
-	<meta charset="UTF-8" />
-	<link href="./src/styles.css" rel="stylesheet">
-	<link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
+    <title>Parcel Sandbox</title>
+    <meta charset="UTF-8" />
+    <link href="./src/styles.css" rel="stylesheet">
+    <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
 </head>
 
 <body>
-	<div class="container w-32 m-auto">
-		<div class="vertical-center">
-			<div class="custom-number-input h-10 w-32" id="target-volume">
-				<label for="custom-input-number" class="w-full text-gray-700 text-sm font-semibold">Counter Input</label>
-				<div class="flex flex-row h-10 w-full rounded-lg relative bg-transparent mt-1">
-					<button data-action="decrement" class=" bg-gray-300 text-gray-600 hover:text-gray-700 hover:bg-gray-400 h-full w-20 rounded-l cursor-pointer outline-none">	<span class="m-auto text-2xl font-thin">−</span>
-					</button>
-					<input type="number" class="outline-none focus:outline-none text-center w-full bg-gray-300 font-semibold text-md hover:text-black focus:text-black  md:text-basecursor-default flex items-center text-gray-700  outline-none" name="custom-input-number" value="0"></input>
-					<button data-action="increment" class="bg-gray-300 text-gray-600 hover:text-gray-700 hover:bg-gray-400 h-full w-20 rounded-r cursor-pointer">	<span class="m-auto text-2xl font-thin">+</span>
-					</button>
-				</div>
-			</div>
-		</div>
-		<script src="src/index.js"></script>
+	
+    <a href="https://github.com/brendan-c/Tailwindcss-Counter" class="m-8 float-right opacity-50 hover:opacity-100"><img src="./src/GitHub-Mark-32px.png" alt="GitHub Repository"></a>
+    <div class="container w-32 m-auto">
+        <div class="vertical-center">
+            <div class="custom-number-input h-10 w-32" id="target-volume">
+                <label for="custom-input-number" class="w-full text-gray-700 text-sm font-semibold">Counter Input
+                </label>
+                <div class="flex flex-row h-10 w-full rounded-lg relative bg-transparent mt-1">
+                    <button data-action="decrement" class=" bg-gray-300 text-gray-600 hover:text-gray-700 hover:bg-gray-400 h-full w-20 rounded-l cursor-pointer outline-none">
+                        <span class="m-auto text-2xl font-thin">−</span>
+                    </button>
+                    <input type="number" class="outline-none focus:outline-none text-center w-full bg-gray-300 font-semibold text-md hover:text-black focus:text-black  md:text-basecursor-default flex items-center text-gray-700  outline-none" name="custom-input-number" value="0"></input>
+                    <button data-action="increment" class="bg-gray-300 text-gray-600 hover:text-gray-700 hover:bg-gray-400 h-full w-20 rounded-r cursor-pointer">
+                        <span class="m-auto text-2xl font-thin">+</span>
+                    </button>
+                </div>
+            </div>
+        </div>
+	
+        <script src="src/script.js"></script>
 </body>
 
 </html>
