--- a/index.html
+++ b/index.html
@@ -2,18 +2,17 @@
 <html>
 
 <head>
-    <title>Parcel Sandbox</title>
+    <title>TailwindCSS Counter</title>
     <meta charset="UTF-8" />
     <link href="./src/styles.css" rel="stylesheet">
     <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
 </head>
 
 <body>
-	
     <a href="https://github.com/brendan-c/Tailwindcss-Counter" class="m-8 float-right opacity-50 hover:opacity-100"><img src="./src/GitHub-Mark-32px.png" alt="GitHub Repository"></a>
     <div class="container w-32 m-auto">
         <div class="vertical-center">
-            <div class="custom-number-input h-10 w-32" id="target-volume">
+            <div class="custom-number-input h-10 w-32">
                 <label for="custom-input-number" class="w-full text-gray-700 text-sm font-semibold">Counter Input
                 </label>
                 <div class="flex flex-row h-10 w-full rounded-lg relative bg-transparent mt-1">
@@ -27,7 +26,6 @@
                 </div>
             </div>
         </div>
-	
         <script src="src/script.js"></script>
 </body>
 
